# battle-engine

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  ARCH.md  ARCH_SMALL.md  BUILD_AND_RUN.md  CMakeLists.txt  CMakePresets.json  KNOWN_ISSUES.md  README.md  commands_battle.txt  commands_swordsman.txt
scripts/: get_commands_battle.py
src/: main.cpp
src/Core/: CollisionReaction.hpp  CombatReaction.hpp  CombatSystem.cpp  CombatSystem.hpp  Components.hpp  Destination.hpp  Engine.hpp  Health.hpp  HealthSystem.cpp  HealthSystem.hpp  Position.hpp  PositionSystem.cpp  PositionSystem.hpp  README.md  RngSystem.cpp  RngSystem.hpp  Signal.hpp  Strength.hpp  StrongType.hpp  Systems.hpp  Unit.hpp
src/Core/Foundation/: Components.hpp  Engine.hpp  StrongType.hpp  Systems.hpp  Unit.hpp  UnitEvents.hpp  UnitSystem.cpp  UnitSystem.hpp
src/Core/Modules/Combat/: CombatReaction.hpp  CombatSystem.cpp  CombatSystem.hpp  Range.hpp
src/Core/Modules/Rng/: RngSystem.cpp  RngSystem.hpp
src/Core/Modules/Spatial/: CollisionReaction.hpp  Destination.hpp  Position.hpp  PositionCommands.hpp  PositionEvents.hpp  PositionSystem.cpp  PositionSystem.hpp
src/Core/Modules/Stats/: Agility.hpp  Speed.hpp  Strength.hpp
src/Core/Modules/Vitals/: Health.hpp  HealthEvents.hpp  HealthSystem.cpp  HealthSystem.hpp
src/Features/: AttackAction.hpp  Hunter.hpp  MoveAction.hpp  README.md  Raven.hpp  Swordsman.hpp
src/Features/Actions/: AttackAction.hpp  MoveAction.hpp
src/Features/Units/: Hunter.hpp  Raven.hpp  Swordsman.hpp
src/Graphics/: EngineBuilder.cpp  EngineBuilder.hpp  EventFeed.cpp  EventFeed.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  IconSet.cpp  IconSet.hpp  Picking.cpp  Picking.hpp  Renderer.cpp  Renderer.hpp  VisualizerState.hpp  WorldEditor.cpp  WorldEditor.hpp  main_visualizer.cpp
src/Graphics/Ui/: EventLogPanel.cpp  EventLogPanel.hpp  PropertiesPanel.cpp  PropertiesPanel.hpp  Toolbar.cpp  Toolbar.hpp  UnitsPanel.cpp  UnitsPanel.hpp
src/Graphics/assets/: gen_icons.py
src/IO/: Types.hpp
src/IO/Commands/: CreateMap.hpp  March.hpp  SpawnHunter.hpp  SpawnRaven.hpp  SpawnSwordsman.hpp
src/IO/Events/: MapCreated.hpp  MarchEnded.hpp  MarchStarted.hpp  UnitAttacked.hpp  UnitDied.hpp  UnitMoved.hpp  UnitSpawned.hpp
src/IO/System/: CommandParser.cpp  CommandParser.hpp  EventLog.hpp  EventTraits.hpp  PrintDebug.hpp
src/IO/System/details/: CommandParserVisitor.hpp  PrintFieldVisitor.hpp
test_runner/: main.py  pyproject.toml
tests/01_example/: commands.txt  expected.txt
tests/02_create_map/: commands.txt  expected.txt
tests/03_unique_id_occupancy/: commands.txt  expected.txt
tests/04_turn_order/: commands.txt  expected.txt
tests/05_spawn_died_events/: commands.txt  expected.txt
tests/06_death_after_turn/: commands.txt  expected.txt
tests/07_move_eight_dirs/: commands.txt  expected.txt
tests/09_march_events/: commands.txt  expected.txt
tests/10_sim_end_conditions/: commands.txt  expected.txt
tests/11_spawn_rejected/: commands.txt  expected.txt
tests/12_diagonal_step/: commands.txt  expected.txt
tests/13_cell_contention/: commands.txt  expected.txt
tests/14_march_dest_occupied/: commands.txt  expected.txt
tests/15_sim_end_idle/: commands.txt  expected.txt
tests/16_swordsman_spawn/: commands.txt  expected.txt
tests/17_crushing_blow/: commands.txt  expected.txt
tests/18_no_target_moves/: commands.txt  expected.txt
tests/19_attack_over_move/: commands.txt  expected.txt
tests/20_random_target/: commands.txt  expected.txt
tests/21_two_swordsmen_order/: commands.txt  expected.txt
tests/22_double_death_dedup/: commands.txt  expected.txt
tests/23_raven_speed_two/: commands.txt  expected.txt
tests/24_raven_flies_over/: commands.txt  expected.txt
tests/25_raven_non_occupying/: commands.txt  expected.txt
tests/26_hunter_rapid_shot/: commands.txt  expected.txt
tests/27_hunter_shadow_strike/: commands.txt  expected.txt
tests/28_hunter_marches_no_target/: commands.txt  expected.txt
tests/29_hunter_zero_damage_no_shot/: commands.txt  expected.txt
tests/30_raven_claw_and_melee_immune/: commands.txt  expected.txt
tests/31_raven_ranged_band_reduced/: commands.txt  expected.txt
tests/32_hunter_blocked_by_adjacent/: commands.txt  expected.txt
tests/33_hunter_shoots_raven/: commands.txt  expected.txt
tests/34_hunter_raven_distance_one/: commands.txt  expected.txt
